--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -28,13 +28,30 @@ jobs:
           username: ${{ secrets.EC2_USER }}
           key: ${{ secrets.EC2_SSH_KEY }}
           script: |
+            # Stop and remove old container if exists
             docker stop fastapi-container || true
             docker rm fastapi-container || true
 
-            # Create .env file on the server from GitHub secret
+            # Start Redis if not running
+            if [ "$(docker ps -q -f name=redis)" = "" ]; then
+              if [ "$(docker ps -aq -f status=exited -f name=redis)" != "" ]; then
+                docker start redis
+              else
+                docker run -d --name redis -p 6379:6379 redis:7
+              fi
+            fi
+
+            # Write .env file from GitHub secret
             echo "${{ secrets.ENV_FILE }}" > .env
 
+            # Pull latest image
             docker pull ${{ secrets.DOCKER_USERNAME }}/fastapi-app:latest
 
-            # Run container with env file
-            docker run -d --name fastapi-container -p 8888:8888 --env-file .env ${{ secrets.DOCKER_USERNAME }}/fastapi-app:latest
+            # Run app container with env and Redis connection
+            docker run -d --name fastapi-container \
+              --env-file .env \
+              -e REDIS_QUEUE_HOST=redis \
+              -e REDIS_QUEUE_PORT=6379 \
+              -p 8888:8888 \
+              --network bridge \
+              ${{ secrets.DOCKER_USERNAME }}/fastapi-app:latest
